feat: Complete modular backtest engine redesign with comprehensive system enhancements
MAJOR ARCHITECTURAL IMPROVEMENTS:
• Modular Backtest Engine: Complete redesign with industry-standard Python packaging
  - /backtest/core/: Professional portfolio, fee calculation, and strategy interfaces
  - /backtest/strategies/: squeezeflow_strategy.py (58KB) + debug_strategy.py
  - /backtest/visualization/: Professional plotting system replacing Grafana dashboards
  - /backtest/tests/: 42 unit tests achieving 100% pass rate with real API validation

• Multi-Timeframe Data Infrastructure: Automated InfluxDB continuous queries
  - 6 timeframes (1m-4h): aggr_1m, aggr_5m, aggr_15m, aggr_30m, aggr_1h, aggr_4h
  - 30-day rolling data retention with efficient pre-aggregated storage
  - 10x faster queries eliminating real-time pandas resampling overhead

• Production Docker Architecture: 9-service microservices deployment
  - aggr-influx: InfluxDB 1.8.10 time-series database
  - aggr-server: Node.js data collection from 24+ exchanges
  - squeezeflow-redis: Redis 7-alpine caching and message queue
  - squeezeflow-calculator: Core signal generation service
  - squeezeflow-freqtrade: Trading engine with FreqAI integration
  - squeezeflow-freqtrade-ui: Web interface for trading management
  - squeezeflow-oi-tracker: Open Interest tracking service
  - squeezeflow-monitor: System health monitoring
  - aggr-chronograf: InfluxDB administration interface

ENHANCED TRADING SYSTEM:
• Market Coverage: 24+ exchanges via aggr-server (binance, bybit, coinbase, etc.)
  - Current pairs: BTC/USDT, ETH/USDT with expandable multi-pair architecture
  - Database-driven symbol/market discovery replacing hardcoded lists

• Risk Management System: Hierarchical YAML configuration
  - Position sizing: 2% maximum per position, 10% total exposure
  - Risk limits: 5 consecutive losses, 5% daily loss, 15% drawdown
  - Stop loss: 2% default, take profit: 4% (flow-following disabled)

• Advanced Strategy Implementati

--- a/.gitignore
+++ b/.gitignore
@@ -264,6 +264,16 @@ trading_results/
 performance_reports/
 
 # ==============================================
+# AI AGENTS AND DEVELOPMENT TOOLS
+# ==============================================
+
+# AI Agent Sessions and Temporary Files
+agents/
+.agents/
+*.agent
+agent_logs/
+
+# ==============================================
 # TESTING
 # ==============================================
 
