fix: Correct strategy import paths and add backtest results to gitignore
STRATEGY IMPORT FIXES:
• Fixed import paths in squeezeflow_strategy.py and debug_strategy.py
  - Changed from ..strategy to ..core.strategy for BaseStrategy imports
  - Updated strategy_logger import path to ..strategy_logging.strategy_logger
  - Fixed strategy registration in core/strategy.py with correct relative imports

• Strategy Registration Updates:
  - Fixed import paths from .strategies to ..strategies in core/strategy.py
  - Both debug_strategy and squeezeflow_strategy now properly registered
  - Available strategies: squeezeflow, ma_crossover, debug_strategy, squeezeflow_strategy

GITIGNORE IMPROVEMENTS:
• Added backtest/results/ to .gitignore to exclude temporary backtest outputs
• Removed existing backtest result images from git tracking
• Prevents accidental commits of large result files and logs

VALIDATION:
• Confirmed backtest engine now works with --strategy squeezeflow_strategy
• Strategy loading and signal generation functioning correctly
• Proper CVD analysis and multi-timeframe data processing operational

--- a/.gitignore
+++ b/.gitignore
@@ -273,6 +273,9 @@ agents/
 *.agent
 agent_logs/
 
+# Backtest Results and Temporary Output
+backtest/results/
+
 # ==============================================
 # TESTING
 # ==============================================
