docs: Update strategy documentation for 1-second data methodology
Updated Documentation:
- Enhanced squeezeflow_strategy.md with comprehensive 1s data approach
- Clarified CVD calculation always from raw 1s data (never aggregated)
- Explained timeframes as analysis windows, not candle periods
- Added detailed implementation notes for each strategy phase
- Documented continuous query architecture for direct 1s aggregation

Key Technical Clarifications:
- CVD calculated every second for maximum precision
- Candles created only when needed for pattern recognition
- Direct aggregation from 1s to all timeframes (no chaining)
- Multi-window validation uses scoring system
- All timeframes perfectly aligned from same 1s source

Infrastructure Updates:
- Updated .gitignore for backup directories and temporary files
- Added persistence.json and data/__force_rebuild__ to ignore list

This completes the documentation phase of 1s implementation.
Next: Implement critical memory management fixes for backtest engine.

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ freqtrade/user_data/strategies/*_prod.py
 # InfluxDB data directories
 influxdb-data/
 influxdb-data-backup/
+influxdb-backup-*/
 data/influxdb/
 aggr-server/data/influxdb/
 
@@ -43,6 +44,7 @@ dump.rdb
 *.rdb
 redis-data/
 data/redis/
+persistence.json
 
 # SQLite databases
 *.db
@@ -462,3 +464,10 @@ performance_test_*.py
 # =============================================================================
 # END OF GITIGNORE
 # ==============================================================================
+# Backup directories
+aggr-server-backup-*/
+
+# Temporary and generated files
+backtest_results.png
+data/__force_rebuild__
+real_time_1s_implementation_guide.md
