feat: Add OI tracker service to server configuration
- Add Open Interest (OI) tracker service to docker-compose.server.yml
- Include Redis dependency for OI tracker caching
- Configure OI data to use same retention policy as trades (aggr_1s)
- Add comprehensive deployment script for server setup
- OI tracker uses environment variables for InfluxDB/Redis connection
- Server now collects both market data and open interest data

--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -88,3 +88,36 @@ services:
       - aggr-influx
     networks:
       - aggr_backend
+
+  # Open Interest Tracker - ADDED FOR SERVER
+  oi-tracker:
+    container_name: squeezeflow-oi-tracker
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.oi-tracker
+    restart: unless-stopped
+    environment:
+      - INFLUX_HOST=aggr-influx
+      - INFLUX_PORT=8086
+      - INFLUX_DATABASE=significant_trades
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      # OI data uses same retention policy as trades
+      - OI_RETENTION_POLICY=aggr_1s
+      - OI_MEASUREMENT=oi_1s
+    depends_on:
+      - aggr-influx
+      - redis
+    networks:
+      - aggr_backend
+
+  # Redis for OI Tracker - ADDED FOR SERVER
+  redis:
+    container_name: squeezeflow-redis-server
+    image: redis:7-alpine
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes --maxmemory 1gb --maxmemory-policy allkeys-lru
+    networks:
+      - aggr_backend
