fix: Make OI tracker truly config-based and remove PI special case
- Remove dynamic database symbol discovery completely
- PI is treated as regular symbol, not Kraken special case
- Generate futures markets dynamically based on exchange patterns
- No hardcoded symbol mappings, purely pattern-based
- Should eliminate database queries for symbol discovery
- Clean config: OI_SYMBOLS=TON,STRK,AVAX,DOGE,PI,BTC,ETH,ARB

--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -110,6 +110,8 @@ services:
       - BYBIT_OI_INTERVAL=60             # 1 minute (real-time capable)  
       - OKX_OI_INTERVAL=60               # 1 minute
       - DERIBIT_OI_INTERVAL=60           # 1 minute
+      # OI Symbols Configuration (comma-separated)
+      - OI_SYMBOLS=TON,STRK,AVAX,DOGE,PI,BTC,ETH,ARB
     depends_on:
       - aggr-influx
     networks:
