feat: Add comprehensive dashboard implementations and testing utilities
- Add multiple dashboard visualizers (TradingView, unified, exchange analytics)
- Create test utilities for dashboard validation and divergence detection
- Add performance reports directory for storing backtest results
- Update documentation with dashboard progress and fix summaries
- Enhance backtest engine with improved data handling
- Update strategy components with better OI tracking and divergence detection
- Add run_full_backtest.sh script for automated testing
- Fix various data pipeline and symbol discovery issues

--- a/.gitignore
+++ b/.gitignore
@@ -293,6 +293,9 @@ data/backtests/
 *_backtest.png
 backtest_*.json
 
+# Results directory (unified location for all backtests)
+/results/
+
 # Strategy performance data
 performance_data/
 strategy_results/
@@ -471,3 +474,7 @@ aggr-server-backup-*/
 backtest_results.png
 data/__force_rebuild__
 real_time_1s_implementation_guide.md
+
+# Temporary debug scripts (DO NOT COMMIT)
+temp_debug_scripts/
+*.tmp.py
